Minor style fixes

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,23 +36,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2681540316962148692\n"
+      "8387769256966911175\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'пассажир планируем программ полет такж выполнен регулярн коммерческ воздушн перевозок пассажир расписан регулярн перевозок воздушн транспорт пассажир воздушн суд количеств пассажирск мест 55 долж владет воздушн суд количеств определя график оборот воздушн суд мен двух эксплуатант выполнен нерегулярн чартерн воздушн перевозок пассажир программ выполнен нерегулярн чартерн перевозок воздушн транспорт пассажир воздушн суд количеств пассажирск мест 55 долж владет воздушн суд включен сертификат эксплуатант количеств определя график оборот воздушн суд мен трех 15 количеств воздушн суд необходим обеспечен планируем программ полет расписан регулярн перевозок воздушн транспорт пассажир планируем программ программ выполнен'"
+       "'взлетн посадочноймасс воздушн суднаобеспечива квс vii правилавыполнениявидовавиационныхработ авиацион химическиеработ сельскомхозяйств 7 1 начал сезон работ кажд воздушн судн занят производств авиацион химическ работ дал ахр передпервымвылет сбазов аэродром проверя контрольн полет облет полн полетн масс установлен сельскохозяйствен аппаратур результат котор записыва эксплуатационнуюдокументац воздушногосудн 7 2 ахр разреша выполня равнин местност такж предгор горн долин удален склон мен 5 км видим немен 3000м навертолет 2000м ивысот нижнейграниц облаковн ниже150м горн местност видим мен 5 км высот нижн границ облак ниж 300 м обеспечен превышен высот нижн границ облаковнад высотойполетан мен 100м случа ухудшенияпогодынижезначен допустим дляконкретн видаработ квспрекраща выполнениеполет 7 3 нача'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,16 +67,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Модель не обучена. Выполняется обучение на переданных чанках...\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -1083,7 +1076,7 @@
        " ...}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1097,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1106,7 +1099,7 @@
        "array([0, 0, 0, ..., 0, 0, 0], shape=(13692,))"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1125,7 +1118,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1139,7 +1132,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
