--- a/testing_mirage_index.ipynb
+++ b/testing_mirage_index.ipynb
@@ -21,11 +21,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "from mirage import BaselineIndex\n",
+    "\n",
     "\n",
     "idx = BaselineIndex(\n",
     "    data_folder='data',\n",
@@ -35,6 +36,24 @@
     "idx.create_index()\n",
     "answers = idx.query('самолет', top_k = 10)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
