MirageIndex class manipulations and TfIdf embedding

--- a/testing_mirage_index.ipynb
+++ b/testing_mirage_index.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -21,17 +21,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "object_passed = None, its type = <class 'NoneType'>abstract = <class 'mirage.index.raw_storages.RawStorage.RawStorage'>, default = <mirage.index.raw_storages.FolderRawStorage.FolderRawStorage object at 0x000002937D9DB2D0>\n",
+      "object_passed = None, its type = <class 'NoneType'>abstract = <class 'mirage.index.chunk_storages.ChunkStorage.ChunkStorage'>, default = <mirage.index.chunk_storages.RAMChunkStorage.RAMChunkStorage object at 0x000002937D9DA7D0>\n",
+      "object_passed = None, its type = <class 'NoneType'>abstract = <class 'mirage.index.chunking_algorithms.ChunkingAlgorithm.ChunkingAlgorithm'>, default = <mirage.index.chunking_algorithms.WordCountingChunkAlgorithm.WordCountingChunkingAlgorithm object at 0x000002937D9D9910>\n",
+      "object_passed = <mirage.embedders.TfIdfEmbedder.TfIdfEmbedder object at 0x000002937D9D8510>, its type = <class 'mirage.embedders.TfIdfEmbedder.TfIdfEmbedder'>abstract = <class 'mirage.embedders.Embedder.Embedder'>, default = <mirage.embedders.BowEmbedder.BowEmbedder object at 0x000002937D9D8810>\n",
+      "object_passed = None, its type = <class 'NoneType'>abstract = <class 'mirage.index.vector_index.VectorIndex.VectorIndex'>, default = <mirage.index.vector_index.ram_vector_index.L2RAMVectorIndex.L2RAMVectorIndex object at 0x0000029381977050>\n",
+      "Performing chunking algorithm\n",
+      "Processed 5 documents\n",
+      "Training an embedder...\n",
+      "Embedder trained\n",
+      "Converting chunks to vectors\n",
+      "Converting ChunkStorage to VectorIndex\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 37/37 [00:00<00:00, 3698.95it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creation of index has been done\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from mirage import BaselineIndex\n",
+    "from mirage.embedders import TfIdfEmbedder\n",
     "\n",
     "\n",
     "idx = BaselineIndex(\n",
     "    data_folder='data',\n",
     "    words_amount_in_chunk=10,\n",
-    "    normalizer=True\n",
+    "    normalizer=True,\n",
+    "    visualize=True\n",
     ")\n",
     "idx.create_index()\n",
     "answers = idx.query('самолет', top_k = 10)"
@@ -39,16 +80,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "str"
+       "QueryResult(distance=0.9994769898751303; vector=[0.         0.         0.         0.         0.         0.\n",
+       " 0.         0.         0.         0.         0.         0.\n",
+       " 0.         0.29624155 0.         0.         0.         0.\n",
+       " 0.         0.         0.         0.         0.         0.\n",
+       " 0.         0.         0.         0.         0.         0.\n",
+       " 0.         0.         0.         0.         0.         0.\n",
+       " 0.         0.         0.         0.         0.         0.\n",
+       " 0.         0.         0.         0.34621525 0.         0.\n",
+       " 0.         0.         0.         0.         0.         0.\n",
+       " 0.         0.         0.         0.         0.         0.\n",
+       " 0.         0.         0.         0.         0.         0.\n",
+       " 0.         0.         0.         0.         0.         0.\n",
+       " 0.         0.         0.         0.         0.         0.\n",
+       " 0.         0.         0.         0.         0.         0.\n",
+       " 0.         0.         0.         0.         0.         0.\n",
+       " 0.         0.         0.         0.23873881 0.         0.\n",
+       " 0.         0.         0.34621525 0.         0.         0.\n",
+       " 0.         0.         0.         0.         0.         0.\n",
+       " 0.         0.         0.         0.         0.         0.\n",
+       " 0.         0.         0.         0.         0.         0.\n",
+       " 0.         0.         0.         0.         0.         0.\n",
+       " 0.         0.         0.         0.         0.         0.\n",
+       " 0.         0.         0.         0.         0.34621525 0.\n",
+       " 0.         0.         0.         0.         0.         0.\n",
+       " 0.         0.         0.         0.         0.         0.\n",
+       " 0.         0.         0.         0.         0.         0.\n",
+       " 0.         0.         0.         0.34621525 0.         0.\n",
+       " 0.         0.         0.         0.         0.         0.\n",
+       " 0.         0.         0.         0.         0.         0.\n",
+       " 0.         0.50052287 0.25026144 0.25026144 0.         0.\n",
+       " 0.         0.         0.         0.         0.         0.\n",
+       " 0.         0.         0.         0.         0.         0.\n",
+       " 0.         0.         0.         0.         0.         0.\n",
+       " 0.         0.         0.         0.         0.         0.\n",
+       " 0.         0.         0.         0.         0.         0.\n",
+       " 0.         0.         0.         0.         0.         0.\n",
+       " 0.         0.         0.         0.         0.         0.\n",
+       " 0.         0.         0.         0.         0.         0.\n",
+       " 0.         0.         0.         0.         0.         0.\n",
+       " 0.         0.         0.         0.         0.        ]; chunk_storage_key=-5631822601544766310)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
