Full test coverage and fixes of bugs uncovered by there tests

--- a/testing_mirage_index.ipynb
+++ b/testing_mirage_index.ipynb
@@ -21,18 +21,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "object_passed = None, its type = <class 'NoneType'>abstract = <class 'mirage.index.raw_storages.RawStorage.RawStorage'>, default = <mirage.index.raw_storages.FolderRawStorage.FolderRawStorage object at 0x000002937D9DB2D0>\n",
-      "object_passed = None, its type = <class 'NoneType'>abstract = <class 'mirage.index.chunk_storages.ChunkStorage.ChunkStorage'>, default = <mirage.index.chunk_storages.RAMChunkStorage.RAMChunkStorage object at 0x000002937D9DA7D0>\n",
-      "object_passed = None, its type = <class 'NoneType'>abstract = <class 'mirage.index.chunking_algorithms.ChunkingAlgorithm.ChunkingAlgorithm'>, default = <mirage.index.chunking_algorithms.WordCountingChunkAlgorithm.WordCountingChunkingAlgorithm object at 0x000002937D9D9910>\n",
-      "object_passed = <mirage.embedders.TfIdfEmbedder.TfIdfEmbedder object at 0x000002937D9D8510>, its type = <class 'mirage.embedders.TfIdfEmbedder.TfIdfEmbedder'>abstract = <class 'mirage.embedders.Embedder.Embedder'>, default = <mirage.embedders.BowEmbedder.BowEmbedder object at 0x000002937D9D8810>\n",
-      "object_passed = None, its type = <class 'NoneType'>abstract = <class 'mirage.index.vector_index.VectorIndex.VectorIndex'>, default = <mirage.index.vector_index.ram_vector_index.L2RAMVectorIndex.L2RAMVectorIndex object at 0x0000029381977050>\n",
+      "object_passed = None, its type = <class 'NoneType'>abstract = <class 'mirage.index.raw_storages.RawStorage.RawStorage'>, default = <mirage.index.raw_storages.FolderRawStorage.FolderRawStorage object at 0x000001E0F30B58D0>\n",
+      "object_passed = None, its type = <class 'NoneType'>abstract = <class 'mirage.index.chunk_storages.ChunkStorage.ChunkStorage'>, default = <mirage.index.chunk_storages.RAMChunkStorage.RAMChunkStorage object at 0x000001E0F3F4A310>\n",
+      "object_passed = None, its type = <class 'NoneType'>abstract = <class 'mirage.index.chunking_algorithms.ChunkingAlgorithm.ChunkingAlgorithm'>, default = <mirage.index.chunking_algorithms.WordCountingChunkingAlgorithm.WordCountingChunkingAlgorithm object at 0x000001E104327090>\n",
+      "object_passed = None, its type = <class 'NoneType'>abstract = <class 'mirage.embedders.Embedder.Embedder'>, default = <mirage.embedders.BowEmbedder.BowEmbedder object at 0x000001E103D8DB90>\n",
+      "object_passed = None, its type = <class 'NoneType'>abstract = <class 'mirage.index.vector_index.VectorIndex.VectorIndex'>, default = <mirage.index.vector_index.ram_vector_index.L2RAMVectorIndex.L2RAMVectorIndex object at 0x000001E1051EE350>\n",
       "Performing chunking algorithm\n",
       "Processed 5 documents\n",
       "Training an embedder...\n",
@@ -45,7 +45,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 37/37 [00:00<00:00, 3698.95it/s]"
+      "100%|██████████| 46/46 [00:00<00:00, 2090.54it/s]"
      ]
     },
     {
