Save and load for FolderRawStorage
Общая идея сейчас состоит в том, чтобы сохранять модули Mirage (как минимум индекс, чтобы не обучать и не считывать его каждый раз при перезапуске программы)

Главная проблема использования pickle файлов  - невозможность переноса источника. Условно, если мы сохраняем все в пикл, и переносим его в другое место, все ломается, ведь наш FolderStorage уже завязан на конкретный путь. Pickle мы редактировать не можем, переносить файлы из других областей мы не моежм, а значит по крайней мере для FolderStorage у нас должно быть сохранение файла вместе с внутренним состоянием объекта. Та же логика для ChunkStorage, VectorIndex.
Возможны пиклы для Embedder-ов, но тут я не уверен насчет корректности сохранения TextNormalizer

--- a/testing_mirage_index.ipynb
+++ b/testing_mirage_index.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n"
@@ -21,119 +12,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "object_passed = None, its type = <class 'NoneType'>abstract = <class 'mirage.index.raw_storages.RawStorage.RawStorage'>, default = <mirage.index.raw_storages.FolderRawStorage.FolderRawStorage object at 0x000001E0F30B58D0>\n",
-      "object_passed = None, its type = <class 'NoneType'>abstract = <class 'mirage.index.chunk_storages.ChunkStorage.ChunkStorage'>, default = <mirage.index.chunk_storages.RAMChunkStorage.RAMChunkStorage object at 0x000001E0F3F4A310>\n",
-      "object_passed = None, its type = <class 'NoneType'>abstract = <class 'mirage.index.chunking_algorithms.ChunkingAlgorithm.ChunkingAlgorithm'>, default = <mirage.index.chunking_algorithms.WordCountingChunkingAlgorithm.WordCountingChunkingAlgorithm object at 0x000001E104327090>\n",
-      "object_passed = None, its type = <class 'NoneType'>abstract = <class 'mirage.embedders.Embedder.Embedder'>, default = <mirage.embedders.BowEmbedder.BowEmbedder object at 0x000001E103D8DB90>\n",
-      "object_passed = None, its type = <class 'NoneType'>abstract = <class 'mirage.index.vector_index.VectorIndex.VectorIndex'>, default = <mirage.index.vector_index.ram_vector_index.L2RAMVectorIndex.L2RAMVectorIndex object at 0x000001E1051EE350>\n",
-      "Performing chunking algorithm\n",
-      "Processed 5 documents\n",
-      "Training an embedder...\n",
-      "Embedder trained\n",
-      "Converting chunks to vectors\n",
-      "Converting ChunkStorage to VectorIndex\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 46/46 [00:00<00:00, 2090.54it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Creation of index has been done\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "['1.txt.txt', '2.txt.txt', '3.txt.txt', '4.txt.txt', '5.txt.txt']\n",
+      "Самолет летит высоко. Самолеты шумят в небе. Самолетный шум громкий. Самолет летит быстро. Самолеты перевозят людей. Самолетный двигатель работает. Самолет летит далеко. Самолеты шумят громко. Самолетный полет красивый. Самолет летит высоко. Самолеты шумят в небе. Самолетный шум громкий. Самолет летит быстро. Самолеты перевозят людей. Самолетный двигатель работает. Самолет летит далеко. Самолеты шумят громко. Самолетный полет красивый. Самолет летит высоко. Самолеты шумят в небе. Самолетный шум громкий. Самолет летит быстро. Самолеты перевозят людей. Самолетный двигатель работает. Самолет летит далеко. Самолеты шумят громко. Самолетный полет красивый.\n",
+      "False\n",
+      "False\n"
      ]
     }
    ],
    "source": [
-    "from mirage import BaselineIndex\n",
-    "from mirage.embedders import TfIdfEmbedder\n",
+    "from mirage import FolderRawStorage\n",
     "\n",
-    "\n",
-    "idx = BaselineIndex(\n",
-    "    data_folder='data',\n",
-    "    words_amount_in_chunk=10,\n",
-    "    normalizer=True,\n",
-    "    visualize=True\n",
-    ")\n",
-    "idx.create_index()\n",
-    "answers = idx.query('самолет', top_k = 10)"
+    "storage = FolderRawStorage(\"data\")\n",
+    "storage.save(\"storage.mirage\")\n",
+    "storage2 = FolderRawStorage.load(\"storage.mirage\")\n",
+    "print(storage2.get_indexes())\n",
+    "print(storage2['1.txt.txt'])\n",
+    "print(storage2 == storage)\n",
+    "print(storage2 is storage)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "QueryResult(distance=0.9994769898751303; vector=[0.         0.         0.         0.         0.         0.\n",
-       " 0.         0.         0.         0.         0.         0.\n",
-       " 0.         0.29624155 0.         0.         0.         0.\n",
-       " 0.         0.         0.         0.         0.         0.\n",
-       " 0.         0.         0.         0.         0.         0.\n",
-       " 0.         0.         0.         0.         0.         0.\n",
-       " 0.         0.         0.         0.         0.         0.\n",
-       " 0.         0.         0.         0.34621525 0.         0.\n",
-       " 0.         0.         0.         0.         0.         0.\n",
-       " 0.         0.         0.         0.         0.         0.\n",
-       " 0.         0.         0.         0.         0.         0.\n",
-       " 0.         0.         0.         0.         0.         0.\n",
-       " 0.         0.         0.         0.         0.         0.\n",
-       " 0.         0.         0.         0.         0.         0.\n",
-       " 0.         0.         0.         0.         0.         0.\n",
-       " 0.         0.         0.         0.23873881 0.         0.\n",
-       " 0.         0.         0.34621525 0.         0.         0.\n",
-       " 0.         0.         0.         0.         0.         0.\n",
-       " 0.         0.         0.         0.         0.         0.\n",
-       " 0.         0.         0.         0.         0.         0.\n",
-       " 0.         0.         0.         0.         0.         0.\n",
-       " 0.         0.         0.         0.         0.         0.\n",
-       " 0.         0.         0.         0.         0.34621525 0.\n",
-       " 0.         0.         0.         0.         0.         0.\n",
-       " 0.         0.         0.         0.         0.         0.\n",
-       " 0.         0.         0.         0.         0.         0.\n",
-       " 0.         0.         0.         0.34621525 0.         0.\n",
-       " 0.         0.         0.         0.         0.         0.\n",
-       " 0.         0.         0.         0.         0.         0.\n",
-       " 0.         0.50052287 0.25026144 0.25026144 0.         0.\n",
-       " 0.         0.         0.         0.         0.         0.\n",
-       " 0.         0.         0.         0.         0.         0.\n",
-       " 0.         0.         0.         0.         0.         0.\n",
-       " 0.         0.         0.         0.         0.         0.\n",
-       " 0.         0.         0.         0.         0.         0.\n",
-       " 0.         0.         0.         0.         0.         0.\n",
-       " 0.         0.         0.         0.         0.         0.\n",
-       " 0.         0.         0.         0.         0.         0.\n",
-       " 0.         0.         0.         0.         0.         0.\n",
-       " 0.         0.         0.         0.         0.        ]; chunk_storage_key=-5631822601544766310)"
-      ]
-     },
-     "execution_count": 65,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   }
  ],
  "metadata": {
